force-app/main/default/objects/Ranking_has_user__c/Ranking_has_user__c.object-meta.xml
<CustomObject>
    <label>Ranking has user</label>
    <nameField>
        <label>Ranking has user Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ranking has users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>