force-app/main/default/objects/Ranking_has_user__c/fields/Activity_points__c.field-meta.xml
<CustomField>
    <fullName>Activity_points__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Activity points</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>