force-app/main/default/objects/Ranking_has_user__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Position</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>