force-app/main/default/objects/Ranking_has_user__c/fields/Ranking__c.field-meta.xml
<CustomField>
    <fullName>Ranking__c</fullName>
    <label>Ranking</label>
    <referenceTo>Ranking__c</referenceTo>
    <relationshipLabel>Ranking has users</relationshipLabel>
    <relationshipName>Ranking_has_users</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>